Fix sonar smells